--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "UBCF7guTk8Ni",
         "colab_type": "code",
-        "outputId": "a6c7055f-db39-4547-f1c2-5eb3663a4d4d",
+        "outputId": "245b3680-e901-44c2-9b39-771c1a68890d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -88,7 +88,7 @@
         "# Print areas\n",
         "print(areas)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,6 +96,113 @@
             "['hallway', 11.25, 'kitchen', 18.0, 'living room', 20.0, 'bedroom', 10.75, 'bathroom', 9.5]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x3rdPysW64XM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "areas_1 = areas + [\"poolhouse\", 24.5]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qs3U6LGY7J33",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "areas_2 =  areas_1 + [\"garage\" , 15.45 ]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ADudHz7y79ir",
+        "colab_type": "text"
+      },
+      "source": [
+        "Deleting a list element"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BracC5ZQ76Qu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "areas = [\"hallway\", 11.25, \"kitchen\", 18.0,\n",
+        "        \"chill zone\", 20.0, \"bedroom\", 10.75,\n",
+        "         \"bathroom\", 10.50, \"poolhouse\", 24.5,\n",
+        "         \"garage\", 15.45]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mAPxuQIJ8hxv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "del(areas[10:11])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1jQo9zxX8lUM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "fe308228-9bca-4a43-efe6-8bbd5a1f44bb"
+      },
+      "source": [
+        "areas"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hallway',\n",
+              " 11.25,\n",
+              " 'kitchen',\n",
+              " 18.0,\n",
+              " 'chill zone',\n",
+              " 20.0,\n",
+              " 'bedroom',\n",
+              " 10.75,\n",
+              " 'bathroom',\n",
+              " 10.5,\n",
+              " 24.5,\n",
+              " 'garage',\n",
+              " 15.45]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
         }
       ]
     }
