--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -205,6 +205,96 @@
           "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qCNbk2d79xq-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Extending a list\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e7QUDkow9z41",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create the areas list and make some changes\n",
+        "areas = [\"hallway\", 11.25, \"kitchen\", 18.0, \"chill zone\", 20.0,\n",
+        "         \"bedroom\", 10.75, \"bathroom\", 10.50]\n",
+        "\n",
+        "# Add poolhouse data to areas, new list is areas_1\n",
+        "\n",
+        "areas_1 = areas + [\"poolhouse\", 24.5]\n",
+        "# Add garage data to areas_1, new list is areas_2\n",
+        "\n",
+        "areas_2 =  areas_1 + [\"garage\" , 15.45 ]\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_sMc1aTx9rhG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hL511_ht9oZE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Inner working of List"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KvZfh7xP9jzU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1396e8c5-1cef-43e3-95d6-b96f86de5fc9"
+      },
+      "source": [
+        "# Create list areas\n",
+        "areas = [11.25, 18.0, 20.0, 10.75, 9.50]\n",
+        "\n",
+        "# Create areas_copy\n",
+        "areas_copy = list(areas)\n",
+        "\n",
+        "# Change areas_copy\n",
+        "areas_copy[0] = 5.0\n",
+        "\n",
+        "# Print areas\n",
+        "print(areas)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[11.25, 18.0, 20.0, 10.75, 9.5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
